* Add Note

Version 3.8.0 - 2015-11-02
* Initial release