@@ -85,6 +85,7 @@
                 }
                 params.model = action.res_model || data.res_model;
                 params.res_id = action.res_id || data.res_id;
+                params.context_model = action.context_model;
                 params.limit = action.limit;
                 params.icon = action['icon.rec_name'] || '';
                 Sao.Tab.create(params);
