@@ -1,3 +1,4 @@
+* Manage context model of ir.action.act_window
 * Add Note
 
 Version 3.8.0 - 2015-11-02
